<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App -->
    <string name="app_name">Social Greenhouse</string>
    <string name="hello_world">Hello world!</string>

    <!-- Titles -->
    <string name="title_activity_server_setup">Server setup</string>
    <string name="title_activity_twitter_setup">Twitter setup</string>
    <string name="title_activity_module_detail">Status</string>
    <string name="title_activity_adk">Configure main unit</string>
    <string name="title_activity_nfc">Module detected</string>

    <!-- Sensors -->
    <string name="sensor_unknown">Unknown</string>
    <string name="sensor_temperature">Temperature</string>
    <string name="sensor_soil_moisture">Soil moisture</string>
    <string name="sensor_wind_direction">Wind direction</string>
    <string name="sensor_humidity">Humidity</string>
    <string name="sensor_rainfall">Rainfall</string>

    <!-- Actions -->
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_help">Help</string>
    <string name="action_server_setup">Set up server</string>
    <string name="action_twitter_setup">Set up Twitter</string>

    <!-- Errors -->
    <string name="error_module_not_found">Module not found</string>
    <string name="error_server_unreachable">Server could not be reached</string>
    <string name="error_io_failure">Something went wrong, please try again.</string>
    <string name="error_server_address_invalid">Not a valid address</string>
    <string name="error_nfc_tag_unreadable">The NFC tag seems to be corrupted</string>
    <string name="error_ssid_invalid">Not a valid SSID</string>
    <string name="error_phrase_invalid">Not a valid phrase</string>
    <string name="error_ip_invalid">Not a valid IP address</string>
    <string name="error_port_invalid">Not a valid port</string>
    <string name="error_adk">Couldn\'t reach the main unit - is it still connected?</string>
    <string name="error_threshold_missing">Enter a threshold</string>
    
    <string name="error_pin_invalid">Not a valid PIN</string>
    <string name="error_twitter_unreachable">Couldn\'t reach Twitter</string>
    <string name="error_twitter_unautohrized">Couldn\'t authorize, please check the PIN and try again</string>

    <!-- Hints -->
    <string name="hint_pin">PIN</string>
    <string name="hint_custom_name">Custom name</string>
    <string name="hint_ssid">SSID</string>
    <string name="hint_phrase">Phrase</string>
    <string name="hint_ip">IP address</string>
    <string name="hint_port">Port</string>
    <string name="hint_tweet">Tweet</string>
    <string name="hint_threshold">0.0</string>
    
    <!-- Phrases -->
    <string name="phrase_minimum">Minimum</string>
    <string name="phrase_maximum">Maximum</string>
    <string name="phrase_no_data">No data yet</string>
    <string name="phrase_server_address">Server address</string>
    <string name="phrase_connect">Connect</string>
    <string name="phrase_connecting">Connecting…</string>
    <string name="phrase_authorize">Authorize</string>
    <string name="phrase_adk_set_network">Set network info</string>
    <string name="phrase_adk_set_server">Set server info</string>
    <string name="phrase_adk_set_network_success">Network successfully configured</string>
    <string name="phrase_adk_set_server_success">Server successfully configured</string>
    <string name="phrase_adk_choose_security_protocol">Choose security protocol</string>
    <string name="phrase_twitter_authorize_success">Your Twitter account is now set up</string>
    <string name="phrase_trigger_data_save_success">Saved</string>
    <string name="phrase_module_delete_success">Deleted</string>
    <string name="phrase_module_save_success">Saved</string>
    
    <!-- Other -->
    <string name="about_server_setup">Enter the address of the server you\'d like to connect with below.</string>
    
    <string-array name="security_protocols">
        <item>Open</item>
        <item>WPA</item>
    </string-array>

</resources>