<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".AdkActivity" >
    
    <EditText
        android:id="@+id/editText_adk_ssid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_ssid"
        android:inputType="text" />

    <Spinner
        android:id="@+id/spinner_adk_security"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/security_protocols"
        android:prompt="@string/phrase_adk_choose_security_protocol" />

    <EditText
        android:id="@+id/editText_adk_phrase"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_phrase"
        android:inputType="text" />

    <Button
        android:id="@+id/button_adk_set_network"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/phrase_adk_set_network" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <EditText
        android:id="@+id/editText_adk_ip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_ip"
        android:inputType="text" />

    <EditText
        android:id="@+id/editText_adk_port"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_port"
        android:inputType="number" />

    <Button
        android:id="@+id/button_adk_set_server"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/phrase_adk_set_server" />

</LinearLayout>